Replace colour codes with defined ones

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,13 @@
-<div class="flex items-center justify-center min-h-screen bg-[#EBF0F3] ">
-    <div class="flex rounded-2xl shadow-blue-100 shadow-lg max-w-3xl bg-white align-middle items-center">
+<div class="flex items-center justify-center min-h-screen bg-light_gray ">
+    <div class="flex rounded-2xl shadow-gray shadow-lg max-w-3xl bg-white align-middle items-center">
         <div class="sm:w-1/2 p-10">
-            <h1 class="text-5xl font-semibold font-primary_font text-center text-gray-700">Welcome !</h1>
+            <h1 class="text-5xl font-semibold font-primary_font text-center text-black">Welcome !</h1>
             <form class="flex flex-col gap-6 font-secondary_font tracking-wider">
-                <input type="text" placeholder="Username" class="rounded-xl border p-2 mt-8 "/>
-                <input type="password" placeholder="Password" class="rounded-xl border p-2"/>
-                <button class="bg-[#E97F7E] text-white rounded-xl py-2 hover:scale-105 hover:duration-300 text-lg">Login</button>
+                <input type="text" placeholder="Username" class="rounded-xl border-2 border-gray p-2 mt-8 "/>
+                <input type="password" placeholder="Password" class="rounded-xl border-2 border-gray p-2"/>
+                <button class="bg-coral text-white rounded-xl py-2 hover:scale-105 hover:duration-300 text-lg">Login</button>
             </form>
-            <div class="text-center text-gray-400 mt-16 font-secondary_font tracking-wide">
+            <div class="text-center text-black mt-16 font-secondary_font tracking-wide">
                 <a routerLink="../signup" class="font-primary_font text-2xl font-bold hover:text-gray-700 hover:duration-300">Sign Up</a> if you are new to the club
             </div>
         </div>
