--- a/src/app/modules/user/components/header/header.component.html
+++ b/src/app/modules/user/components/header/header.component.html
@@ -1,15 +1,17 @@
 <div class="bg-gray flex justify-center">
-    <nav class="my-6">
-        <ul class="lg:flex hidden items-center text-sm gap-14 font-secondary_font font-semibold text-black">
-            <a routerLink="./home">
-                <li class="hover:scale-110 hover:duration-500">Home</li>
-            </a>
-            <a routerLink="./about">
-                <li class="hover:scale-110 hover:duration-500">About</li>
-            </a>
-            <a routerLink="./community">
-                <li class="hover:scale-110 hover:duration-500">Community</li>
-            </a>
-        </ul>
-    </nav>
+  <nav class="my-6">
+    <ul
+      class="lg:flex hidden items-center text-sm gap-14 font-secondary_font font-semibold text-black"
+    >
+      <a routerLink="./home">
+        <li class="hover:scale-110 hover:duration-500">Home</li>
+      </a>
+      <a routerLink="./about">
+        <li class="hover:scale-110 hover:duration-500">About</li>
+      </a>
+      <a routerLink="./community">
+        <li class="hover:scale-110 hover:duration-500">Community</li>
+      </a>
+    </ul>
+  </nav>
 </div>
