--- a/src/app/modules/user/components/header/header.component.html
+++ b/src/app/modules/user/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray flex justify-center">
+<div class="bg-white flex justify-center shadow-blue-500">
   <nav class="my-6">
     <ul
       class="lg:flex hidden items-center text-sm gap-14 font-secondary_font font-semibold text-black"
