--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,19 @@
-<p>not-found works!</p>
+<div
+  class="flex flex-col items-center justify-start min-h-screen border-none bg-light_gray"
+>
+  <div class="w-[530px] sm:block">
+    <img src="assets/404-cover.svg" />
+  </div>
+  <div class="flex flex-col items-center">
+    <div class="text-4xl font-secondary_font text-black font-semibold">
+      Oops... Page Not Found
+    </div>
+    <a routerLink="/">
+      <div
+        class="bg-black text-center text-white w-44 py-3 rounded-full font-secondary_font hover:scale-105 hover:duration-300 mt-6"
+      >
+        Back to Login
+      </div>
+    </a>
+  </div>
+</div>
