--- a/src/app/modules/user/components/about/about.component.html
+++ b/src/app/modules/user/components/about/about.component.html
@@ -1,21 +1,22 @@
 <div class="flex items-start justify-center min-h-screen bg-white pt-16">
-    <div class="flex max-w-4xl align-middle items-center">
-        <div class="sm:w-1/2 p-10">
-            <h1 class="text-6xl font-semibold font-primary_font text-center text-black">
-                About Us
-            </h1>
-            <h3 class="text-md font-secondary_font mt-8 text-justify">
-                This is your go-to destination for vibrant and healthy smoothie bowl recipes. We're a passionate
-                community of
-                food enthusiasts committed to making nutritious eating exciting and accessible. <br>Explore a world of
-                colorful creations,
-                connect with fellow foodies, elevate your well-being through our delicious, eye-catching recipes, and
-                share your own
-                smoothie bowl creations. Join us today!
-            </h3>
-        </div>
-        <div class="w-[400px] sm:block hidden">
-            <img src="assets/about-cover.svg" class="rounded-tr-2xl rounded-br-2xl" />
-        </div>
+  <div class="flex max-w-4xl align-middle items-center">
+    <div class="sm:w-1/2 p-10">
+      <h1
+        class="text-6xl font-semibold font-primary_font text-center text-black"
+      >
+        About Us
+      </h1>
+      <h3 class="text-md font-secondary_font mt-8 text-justify">
+        Fruit Bowl is your go-to destination for vibrant and healthy smoothie
+        bowl recipes. We're a passionate community of food enthusiasts committed
+        to making nutritious eating exciting and accessible. <br><br>Explore a
+        world of colorful creations, connect with fellow foodies, elevate your
+        well-being through our delicious, eye-catching recipes, and share your
+        own smoothie bowl creations. Join us today!
+      </h3>
     </div>
+    <div class="w-[400px] sm:block hidden">
+      <img src="assets/about-cover.svg" class="rounded-tr-2xl rounded-br-2xl" />
+    </div>
+  </div>
 </div>
