--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,18 +9,16 @@
         Welcome !
       </h1>
       <form class="flex flex-col gap-6 font-secondary_font tracking-wider" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <input
-          type="text"
-          placeholder="Username"
-          formControlName="username"
-          class="rounded-xl border-2 border-gray p-2 mt-8"
-        />
-        <input
-          type="password"
-          placeholder="Password"
-          formControlName="password"
-          class="rounded-xl border-2 border-gray p-2"
-        />
+        <div class="flex flex-col">
+          <input type="text" placeholder="Username" formControlName="username" class="rounded-xl border-2 border-gray p-2 mt-8" />
+          <span *ngIf="username && username.invalid && username.touched"
+            class="text-red-500 font-semibold tracking-normal mt-0">Username Required !</span>
+        </div>
+        <div class="flex flex-col">
+          <input type="password" placeholder="Password" formControlName="password" class="rounded-xl border-2 border-gray p-2" />
+          <span *ngIf="password && password.invalid && password.touched"
+            class="text-red-500 font-semibold tracking-normal mt-0">Password Required !</span>
+        </div>
         <button
           class="bg-coral text-white rounded-xl py-2 hover:scale-105 hover:duration-300 text-lg"
         >
@@ -32,7 +30,7 @@
       >
         <a
           routerLink="../signup"
-          class="font-primary_font text-2xl font-bold hover:text-gray-700 hover:duration-300"
+          class="font-primary_font text-2xl font-bold hover:text-coral hover:duration-300"
           >Sign Up</a
         >
         if you are new to the club
