--- a/src/app/modules/user/components/add-recipe-modal/add-recipe-modal.component.html
+++ b/src/app/modules/user/components/add-recipe-modal/add-recipe-modal.component.html
@@ -2,17 +2,44 @@
     <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
         <div class="flex min-h-full items-center justify-center p-4 text-center sm:items-center sm:p-0">
             <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4 w-[500px] h-auto shadow-lg rounded-lg">
-                <form class="flex flex-col gap-6 font-secondary_font tracking-wider" [formGroup] = "add_recipe_form" (ngSubmit)="addRecipe()">
+                <form class="flex flex-col gap-6 font-secondary_font tracking-wider" [formGroup]="add_recipe_form"
+                    (ngSubmit)="addRecipe()">
                     <h3 class="text-4xl font-semibold leading-6 text-black font-primary_font">New Recipe</h3>
-                    <input type="text" placeholder="Recipe Name" class="rounded-xl border-2 border-gray p-2 mt-4" formControlName="recipe_name"/>
-                    <textarea placeholder="Ingridients" class="rounded-xl border-2 border-gray p-2" formControlName="recipe_ingridients"></textarea>
-                    <textarea placeholder="Steps to Make" class="rounded-xl border-2 border-gray p-2" formControlName="recipe_steps"></textarea>
+                    <div class="flex flex-col items-start">
+                        <input type="text" placeholder="Recipe Name"
+                            class="rounded-xl border-2 border-gray p-2 mt-4 w-full" formControlName="recipe_name" />
+                        <span *ngIf="recipe_name && recipe_name.invalid && recipe_name.touched"
+                            class="text-red-500 font-semibold tracking-normal">Recipe Name Required !</span>
+                    </div>
+
+                    <div class="flex flex-col items-start">
+                        <textarea placeholder="Ingridients" class="rounded-xl border-2 border-gray p-2 w-full"
+                            formControlName="recipe_ingridients"></textarea>
+                        <span *ngIf="recipe_name && recipe_name.invalid && recipe_name.touched"
+                            class="text-red-500 font-semibold tracking-normal">Ingridients Required !</span>
+                    </div>
+                    <div class="flex flex-col items-start">
+                        <textarea placeholder="Steps to Make" class="rounded-xl border-2 border-gray p-2 w-full"
+                            formControlName="recipe_steps"></textarea>
+                        <span *ngIf="recipe_name && recipe_name.invalid && recipe_name.touched"
+                            class="text-red-500 font-semibold tracking-normal">Recipe Steps Required !</span>
+                    </div>
+                    <div class="flex flex-col items-start">
+                        <select class="rounded-xl border-2 border-gray p-2 w-full" formControlName="prepTime">
+                            <option value="" disabled selected>Select the Prep Time</option>
+                            <option value="5 min">5 mins</option>
+                            <option value="15 min">15 mins</option>
+                            <option value="25 min">25 mins</option>
+                        </select>
+                        <span *ngIf="recipe_name && recipe_name.invalid && recipe_name.touched"
+                            class="text-red-500 font-semibold tracking-normal">Prep Time Required !</span>
+                    </div>
                     <div class="flex">
-                        <button class="bg-coral text-white rounded-xl py-2 hover:scale-105 hover:duration-300 text-lg w-1/2 mr-2">
+                        <button [disabled]="add_recipe_form.invalid"
+                            class="bg-coral text-white rounded-xl py-2 hover:scale-105 hover:duration-300 text-lg w-1/2 mr-2">
                             Add
                         </button>
-                        <button
-                        (click)="closeModal()"
+                        <button (click)="closeModal()"
                             class="text-[#cbd5e1] font-semibold border-2 border-dashed border-[#cbd5e1] rounded-xl py-2 hover:scale-105 hover:duration-300 text-lg w-1/2">
                             Cancel
                         </button>
