--- a/src/app/modules/user/components/recipe-card/recipe-card.component.html
+++ b/src/app/modules/user/components/recipe-card/recipe-card.component.html
@@ -1,10 +1,25 @@
-    <div class="flex rounded-2xl shadow-lg max-w-md bg-white align-middle items-center hover:shadow:2xl hover:scale-105 hover:duration-500 cursor-pointer">
-        <div class="w-1/3 sm:block hidden">
-            <img src="https://images.pexels.com/photos/4099233/pexels-photo-4099233.jpeg?auto=compress&cs=tinysrgb&w=600" class="rounded-tl-2xl rounded-bl-2xl w-full object-cover" />
-        </div>
-        <div class="sm:w-2/3 p-10">
-            <h1 class="text-2xl font-semibold font-primary_font text-left text-black">
-                Welcome !
+<div class="flex rounded-lg max-w-sm h-fit bg-white align-middle items-center hover:scale-105 hover:duration-500">
+    <div class="w-1/3 sm:block hidden">
+        <img src="https://images.pexels.com/photos/4099233/pexels-photo-4099233.jpeg?auto=compress&cs=tinysrgb&w=600" class="rounded-tl-lg rounded-bl-lg w-full object-cover" />
+    </div>
+    <div class="sm:w-2/3 p-6">
+        <div class="h-28">
+            <h1 class="text-xl font-semibold font-primary_font text-left text-black">
+                {{recipeInfo.title}}
             </h1>
         </div>
+        <div class="flex text-[#93B7C5] font-semibold mt-2 cursor-pointer hover:text-black hover:duration-500" (click)="openRecipeModal(recipeIndex)">
+            <p class="font-secondary_font italic">See More</p>
+
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M11.25 4.5l7.5 7.5-7.5 7.5m-6-15l7.5 7.5-7.5 7.5" />
+            </svg>
+
+        </div>
     </div>
+</div>
+
+<div *ngIf="homeService.openRecipeModal(recipeIndex)">
+    <app-recipe-info-modal [recipeCardIndex] = "recipeIndex"></app-recipe-info-modal>
+</div>
