Style Footer component

--- a/src/app/modules/user/components/footer/footer.component.html
+++ b/src/app/modules/user/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="bg-black h-32 w-full flex justify-center items-end pb-5">
+    <div class="font-secondary_font text-gray text-sm tracking-wide">
+        A Project By @Methma Peiris
+    </div>
+</div>
