Add responsiveness to about page

--- a/src/app/modules/user/components/about/about.component.html
+++ b/src/app/modules/user/components/about/about.component.html
@@ -1,9 +1,7 @@
-<div class="flex items-start justify-center min-h-screen bg-white pt-16">
-  <div class="flex max-w-4xl align-middle items-center">
+<div class="flex justify-center min-h-screen bg-white">
+  <div class="flex flex-col max-w-4xl justify-center items-center md:flex-row">
     <div class="sm:w-1/2 p-10">
-      <h1
-        class="text-6xl font-semibold font-primary_font text-center text-black"
-      >
+      <h1 class="text-6xl font-semibold font-primary_font text-center text-black">
         About Us
       </h1>
       <h3 class="text-md font-secondary_font mt-8 text-justify">
@@ -15,7 +13,7 @@
         own smoothie bowl creations. Join us today!
       </h3>
     </div>
-    <div class="w-[400px] sm:block hidden">
+    <div class="w-[275px] md:w-[500px]">
       <img src="assets/about-cover.svg" class="rounded-tr-2xl rounded-br-2xl" />
     </div>
   </div>
