Add opacity to the bg image shown in sm screen

--- a/src/app/modules/user/components/home/home.component.html
+++ b/src/app/modules/user/components/home/home.component.html
@@ -22,7 +22,7 @@
                 <img src="https://images.unsplash.com/photo-1497888329096-51c27beff665?auto=format&fit=crop&q=80&w=2071&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                     class="w-full max-w-full" />
             </div>
-            <div class="w-full object-cover sm:hidden sm:opacity-20">
+            <div class="w-full object-cover sm:hidden opacity-80">
                 <img src="https://images.pexels.com/photos/4099233/pexels-photo-4099233.jpeg?auto=compress&cs=tinysrgb&w=600"
                     class="w-full object-cover" />
             </div>
