--- a/src/app/modules/user/components/recipe-info-modal/recipe-info-modal.component.html
+++ b/src/app/modules/user/components/recipe-info-modal/recipe-info-modal.component.html
@@ -1,8 +1,38 @@
 <div class="relative z-10">
     <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
-        <div class="flex min-h-full items-center justify-center p-4 text-center sm:items-center sm:p-0">
-            <div class="bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4 w-[500px] h-auto shadow-lg rounded-lg">
-                <p>Hello</p>
+        <div class="flex min-h-full items-center justify-center p-4 sm:items-center sm:p-0">
+            <div class="bg-white px-6 pb-4 pt-5 sm:p-10 sm:pb-4 w-[800px] h-auto shadow-lg rounded-lg">
+                <div class="flex flex-col tracking-wider text-black">
+                    <h3 class="text-4xl font-semibold leading-10 font-primary_font text-center mb-10">
+                        {{recipeInfo.title}}</h3>
+                    <div class="mb-6">
+                        <h3 class="text-2xl font-secondary_font font-semibold text-coral italic mb-2">Ingridients</h3>
+                        <h3 class="text-black text-justify">{{recipeInfo.body}}</h3>
+                    </div>
+                    <div class="mb-6">
+                        <h3 class="text-2xl font-secondary_font font-semibold text-coral italic mb-2">Steps</h3>
+                        <ul class="text-black text-justify list-disc">
+                            <li class="mb-3">
+                                {{recipeSteps[0].body}}
+                            </li>
+                            <li class="mb-3">
+                                {{recipeSteps[1].body}}
+                            </li>
+                            <li class="mb-3">
+                                {{recipeSteps[2].body}}
+                            </li>
+                            <li>
+                                {{recipeSteps[3].body}}
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex justify-center">
+                        <button (click)="closeRecipeModal(recipeIndex)"
+                            class="text-[#cbd5e1] font-semibold border-2 border-dashed border-[#cbd5e1] rounded-xl py-2 hover:scale-105 hover:duration-300 hover:bg-black hover:text-white text-lg w-1/2 hover:border-none">
+                            Close Recipe
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
