Enhance the responsiveness in header and home components

--- a/src/app/modules/user/components/header/header.component.html
+++ b/src/app/modules/user/components/header/header.component.html
@@ -2,8 +2,8 @@
   <div class="w-20">
     <img src="assets/logo.png" alt="" class="w-full">
   </div>
-  <nav class="my-6">
-    <ul class="sm:flex hidden items-center text-sm gap-14 font-secondary_font font-semibold text-black">
+  <nav class="my-6 ml-10 sm:ml-0">
+    <ul class="flex items-center text-sm gap-14 font-secondary_font font-semibold text-black">
       <a routerLink="./home">
         <li class="hover:scale-110 hover:duration-500">Home</li>
       </a>
